# RAG_EU_AI

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_GUIDE.md  Makefile  README_EU_AI_RAG.md  UPDATE_PROJ.md  demetra_hpc_guide.md  docker-compose.yml  possible_implementations.md  pyproject.toml
bm25_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/qdrant/: meta.json
docs/: vllm_runbook.md  voting_rerank_design.md
eval/: report_template.md  test_set.json
infra/: prometheus.yml
infra/grafana/dashboards/: rag_dashboard.json
lightrag_data/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json
scripts/: check_snippet_len.py  diagnose_rerank.py  diagnose_retrieval.py  download.py  download_hf.py  eval_redis.py  ingest.py  ingest_hf.py  rebuild_bm25.py  run_eval.py  start_challenge.sh  warmup_cache.py
slurm/: 00_common.sh  README.md  api_server.slurm  api_tunnel.slurm  check_snippet_len.slurm  diagnose_rerank.slurm  diagnose_retrieval.slurm  fix_bm25_verify.slurm  infra.slurm  ingest.slurm  ingest_hf.slurm  redis_eval.slurm  sglang_eagle.slurm  sglang_probe.slurm  sglang_server.slurm  single_node.slurm
src/: clients.py  config.py
src/api/: main.py
src/cache/: semantic_cache.py
src/generation/: generator.py  normalizer.py  prompts.py
src/ingestion/: chunker.py  hf_loader.py  hype.py  indexer.py  parser.py
src/observability/: metrics.py
src/retrieval/: article_matcher.py  bm25_index.py  query_engine.py  reranker.py  triple_retriever.py
tests/: conftest.py  test_adaptive_snippet.py  test_answers.py  test_api_input.py  test_article_matcher_extra.py  test_bm25_hit.py  test_chunk_voting.py  test_chunker.py  test_chunker_suite.py  test_generator.py  test_generator_suite.py  test_hf_loader.py  test_llm_rerank.py  test_load.py  test_multiturn.py  test_normalizer_contract.py  test_normalizer_extra.py  test_parser.py  test_parser_suite.py  test_query_engine.py  test_query_engine_suite.py  test_references.py  test_retrieval.py  test_semantic_cache_backend.py  test_semantic_cache_logic.py  test_xref_expansion.py
