[project]
name = "eu-ai-act-rag"
version = "1.0.0"
description = "Production-grade RAG system answering EU AI Act questions with cited references."
readme = "README_EU_AI_RAG.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core dependencies installable anywhere (no CUDA / torch). These are enough to
# import the API, run the offline unit tests, and talk to remote services.
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Retrieval (clients only — heavy models live in the `ml` extra)
    "qdrant-client>=1.12.0",
    # Cache
    "redis>=5.2.0",
    # LLM client (OpenAI-compatible, talks to SGLang)
    "openai>=1.50.0",
    # Ingestion
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "httpx>=0.27.0",
    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    # Utilities
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# Embedding, reranking, lexical and graph retrieval. Pulls torch — install on a
# GPU compute node via SLURM, never on the login node.
ml = [
    "bm25s[full]>=0.2.0",
    "PyStemmer>=2.2.0",
    "lightrag-hku>=1.0.0",
    "FlagEmbedding>=1.3.0",
    "sentence-transformers>=3.3.0",
]
# LLM inference server. GPU-only, CUDA 12.x. Install on the A100 node.
# `gpu` pulls sglang[all] incl. flashinfer (needs the flashinfer wheel index;
# matches the guide's full setup). `gpu-native` is core sglang only — installs
# from plain cu124 PyPI wheels and runs with the Triton attention backend, which
# is what works on this node's 12.4 driver without the flashinfer index.
gpu = [
    "sglang[all]>=0.4.0",
]
gpu-native = [
    "sglang>=0.4.0",
]
# Test/alternate corpus from the Hugging Face Hub (login-node safe; no torch).
data = [
    "pyarrow>=17.0.0",
    "huggingface-hub>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.uv]
# Resolve the dev group by default; ml/gpu extras are opt-in per environment.
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires the full running stack (SGLang + Qdrant + Redis + API)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The system prompt embeds a verbatim JSON example that must stay on one line.
"src/generation/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
